Improve GREL syntax error handling. Fixes #169. Fixes #2507